# recsys-3-ways

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
notebooks/: movie-recsys-3-ways.ipynb
recsys/: mf.py
