[project]
name = "recsys-3-ways"
version = "0.1.0"
description = "Implementing various levels of Recommendation Engines"

readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "ruff>=0.11.8",
    "scikit-learn>=1.6.1",
]

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["recsys"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
